--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -35,10 +35,6 @@
             },
             "outputs": [],
             "source": [
-                "#\n",
-                "# STEP 1: SETUP AND INSTALLATIONS\n",
-                "#\n",
-                "\n",
                 "# Import all the libraries we'll need\n",
                 "import tensorflow as tf\n",
                 "import numpy as np\n",
@@ -84,12 +80,8 @@
             },
             "outputs": [],
             "source": [
-                "#\n",
-                "# STEP 2: UPLOAD FILES (MODIFIED FOR MULTIPLE SAMPLE ZIPS)\n",
-                "#\n",
-                "\n",
                 "print(\"Please upload your `model.zip` file and all of your sample class zip files.\")\n",
-                "print(\"You can select them all at once in the file dialog.\")\n",
+                "print(\"You should select them all at once in the file dialog (ctrl + mouse Lclick).\")\n",
                 "\n",
                 "# Clean up any previous uploads\n",
                 "if os.path.exists('model'):\n",
@@ -136,10 +128,6 @@
             },
             "outputs": [],
             "source": [
-                "#\n",
-                "# STEP 3: UNZIP FILES (MODIFIED FOR MULTIPLE SAMPLE ZIPS & ROBUSTNESS)\n",
-                "#\n",
-                "\n",
                 "# --- Unzip the model ---\n",
                 "print(\"Unzipping the model...\")\n",
                 "model_extract_path = 'model'\n",
@@ -153,8 +141,6 @@
                 "!ls {model_extract_path}\n",
                 "\n",
                 "# --- Unzip all the samples ---\n",
-                "# This section is modified to be robust to Teachable Machine's zip format.\n",
-                "# It will create a sub-folder for each zip file based on the zip file's name.\n",
                 "print(\"\\nUnzipping samples into class-specific folders...\")\n",
                 "samples_extract_path = 'samples'\n",
                 "# Clean up previous runs\n",
@@ -165,7 +151,7 @@
                 "for sample_zip in sample_zip_paths:\n",
                 "    # 1. Get the class name from the zip filename (e.g., \"Class 1.zip\" -> \"Class 1\")\n",
                 "    # We use os.path.basename to be safe, then os.path.splitext to remove the extension.\n",
-                "    class_name = os.path.splitext(os.path.basename(sample_zip))[0]\n",
+                "    class_name = os.path.splitext(os.path.basename(sample_zip))[0].replace('-samples', '').replace('(1)','').replace('(2)','').replace('(3)','').replace('(4)','').strip()\n",
                 "\n",
                 "    # 2. Create a specific directory for this class inside the 'samples' folder\n",
                 "    class_dir_path = os.path.join(samples_extract_path, class_name)\n",
@@ -200,16 +186,25 @@
             },
             "outputs": [],
             "source": [
-                "#\n",
-                "# STEP 4: LOAD THE ORIGINAL MODEL (WITH FIX)\n",
-                "#\n",
-                "\n",
                 "# --- Load the Keras model ---\n",
                 "model_path = 'model/keras_model.h5'\n",
                 "labels_path = 'model/labels.txt'\n",
                 "\n",
-                "# The compile=False is critical for loading models from Teachable Machine\n",
-                "original_model = tf.keras.models.load_model(model_path, compile=False)\n",
+                "# Define a custom DepthwiseConv2D class to handle the 'groups' argument during loading\n",
+                "# This is a common issue when loading models saved with older TensorFlow versions.\n",
+                "class FixedDepthwiseConv2D(tf.keras.layers.DepthwiseConv2D):\n",
+                "    def __init__(self, *args, **kwargs):\n",
+                "        # Remove the 'groups' argument if it exists, as it's not needed in newer versions\n",
+                "        if 'groups' in kwargs:\n",
+                "            del kwargs['groups']\n",
+                "        super().__init__(*args, **kwargs)\n",
+                "\n",
+                "# The `custom_objects` dictionary tells Keras how to handle the custom layer during loading.\n",
+                "original_model = tf.keras.models.load_model(\n",
+                "    model_path,\n",
+                "    custom_objects={'DepthwiseConv2D': FixedDepthwiseConv2D},\n",
+                "    compile=False\n",
+                ")\n",
                 "\n",
                 "# --- Load the labels ---\n",
                 "with open(labels_path, 'r') as f:\n",
@@ -243,10 +238,6 @@
             },
             "outputs": [],
             "source": [
-                "#\n",
-                "# STEP 5: SANITY CHECK\n",
-                "#\n",
-                "\n",
                 "# --- Helper function to show nice confidence bars ---\n",
                 "def display_prediction_bars(prediction, labels):\n",
                 "    # ANSI escape codes for colors\n",
@@ -308,7 +299,7 @@
                 "    \n",
                 "    # Display the results with bars\n",
                 "    print(\"🤖 Model Prediction:\")\n",
-                "    display_prediction_bars(prediction, class_labels)\n"
+                "    display_prediction_bars(prediction, class_labels)"
             ]
         },
         {
@@ -332,10 +323,6 @@
             },
             "outputs": [],
             "source": [
-                "#\n",
-                "# STEP 6: THE BREAK TEST (NOISE AND ROTATION)\n",
-                "#\n",
-                "\n",
                 "# --- Helper functions to mess up our images ---\n",
                 "def add_noise(img):\n",
                 "    \"\"\"Adds random 'salt and pepper' noise to an image.\"\"\"\n",
@@ -393,7 +380,7 @@
                 "\n",
                 "    # Display the results with bars\n",
                 "    print(\"🤖 Model Prediction:\")\n",
-                "    display_prediction_bars(prediction, class_labels)\n"
+                "    display_prediction_bars(prediction, class_labels)"
             ]
         },
         {
@@ -426,10 +413,6 @@
             },
             "outputs": [],
             "source": [
-                "#\n",
-                "# STEP 7: DATA AUGMENTATION AND RETRAINING\n",
-                "#\n",
-                "\n",
                 "print(\"--- Starting Data Augmentation ---\")\n",
                 "print(\"Creating new, tougher training images. This might take a moment...\")\n",
                 "\n",
@@ -468,8 +451,8 @@
                 "        X_train.append(img_array)\n",
                 "        y_train.append(class_index)\n",
                 "        \n",
-                "        # Now create 5 augmented versions of this image\n",
-                "        for _ in range(5):\n",
+                "        # Now create 3 augmented versions of this image\n",
+                "        for _ in range(3):\n",
                 "            augmented_img = original_pil_image\n",
                 "            # Apply transformations randomly\n",
                 "            if random.random() > 0.5:\n",
@@ -504,7 +487,7 @@
                 "\n",
                 "# Let's train! An \"epoch\" is one full pass through the dataset.\n",
                 "# We'll do a few epochs.\n",
-                "history = original_model.fit(X_train, y_train_one_hot, epochs=5, batch_size=32, shuffle=True, validation_split=0.1)\n",
+                "history = original_model.fit(X_train, y_train_one_hot, epochs=5, batch_size=32, shuffle=True, validation_split=0.2)\n",
                 "\n",
                 "# Let's rename our newly trained model\n",
                 "robust_model = original_model\n",
@@ -579,12 +562,7 @@
             },
             "outputs": [],
             "source": [
-                "#\n",
-                "# STEP 8: LIVE WEBCAM TEST (ENHANCED UI)\n",
-                "#\n",
-                "\n",
                 "# --- Helper functions to handle the webcam stream and UI ---\n",
-                "\n",
                 "def video_stream():\n",
                 "  js = Javascript('''\n",
                 "    var video;\n",
@@ -654,7 +632,7 @@
                 "      // Create the container for prediction bars\n",
                 "      predictionContainer = document.createElement('div');\n",
                 "      div.appendChild(predictionContainer);\n",
-                "      \n",
+                "\n",
                 "      // Add some CSS for the progress bars\n",
                 "      const style = document.createElement('style');\n",
                 "      style.innerHTML = `\n",
@@ -664,7 +642,7 @@
                 "          margin-bottom: 5px;\n",
                 "        }\n",
                 "        .prediction-label {\n",
-                "          width: 150px; \n",
+                "          width: 150px;\n",
                 "          text-align: right;\n",
                 "          margin-right: 10px;\n",
                 "          font-family: sans-serif;\n",
@@ -717,9 +695,10 @@
                 "  display(js)\n",
                 "\n",
                 "def get_frame(prediction_html):\n",
-                "  # This is the corrected function call to the new JS function\n",
-                "  data = eval_js('updatePrediction(\"{}\")'.format(prediction_html.replace('\"', '\\\"')))\n",
+                "  escaped_html = prediction_html.replace(\"'\", \"\\\\'\").replace('\"', '\\\\\"').replace('\\n', '\\\\n')\n",
+                "  data = eval_js('updatePrediction(\\'{}\\')'.format(escaped_html))\n",
                 "  return data\n",
+                "\n",
                 "\n",
                 "def js_to_image(js_reply):\n",
                 "  \"\"\"Decodes a base64-encoded image from JavaScript into an OpenCV image.\"\"\"\n",
@@ -732,7 +711,7 @@
                 "    \"\"\"Creates an HTML string with progress bars for the predictions.\"\"\"\n",
                 "    html = \"\"\n",
                 "    top_prediction_index = np.argmax(prediction[0])\n",
-                "    \n",
+                "\n",
                 "    for i, (label, confidence) in enumerate(zip(labels, prediction[0])):\n",
                 "        confidence_percent = confidence * 100\n",
                 "        winner_class = 'winner' if i == top_prediction_index else ''\n",
@@ -766,7 +745,7 @@
                 "    input_frame = np.expand_dims(normalized_frame, axis=0)\n",
                 "\n",
                 "    # Make a prediction with our NEW ROBUST model\n",
-                "    prediction = robust_model.predict(input_frame, verbose=0) \n",
+                "    prediction = robust_model.predict(input_frame, verbose=0)\n",
                 "\n",
                 "    # Create the HTML for the prediction bars\n",
                 "    prediction_html = create_html_bars(prediction, class_labels)\n",
